# dravya

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bench-history.csv
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/development/: roadmap.md
examples/: basic.rs
src/: beam.rs  bridge.rs  composite.rs  constitutive.rs  elastic.rs  error.rs  fatigue.rs  fracture.rs  lib.rs  logging.rs  material.rs  strain.rs  stress.rs  thermal.rs  yield_criteria.rs
src/integration/: soorat.rs
tests/: integration.rs
